--- a/ch03/ch03-2.ipynb
+++ b/ch03/ch03-2.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597067200741",
+   "name": "python_defaultSpec_1597584990152",
    "display_name": "Python 3.7.8 64-bit"
   }
  },
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,14 +150,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# ☆ここから発表資料"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.5 出力層の設計\n",
+    "- ニューラルネットワークは分類問題と回帰問題の両方に用いることができる。\n",
+    "- 分類問題\n",
+    "  - どのグループに属するのか予測する問題\n",
+    "  - 一般的にソフトマックス関数を使用する\n",
+    "- 回帰問題\n",
+    "  - 連続した数値を予測する問題\n",
+    "  - 一般的に恒等関数を使用する\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.5.1 恒等関数とソフトマックス関数\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ソフトマックス関数(3.10)\n",
+    "  - $exp$ はネイピア数\n",
+    "    - シグモイド関数でも使用されていた奴\n",
+    "    - ネイピア数は数学定数の一つであり、自然対数の底である。\n",
+    "\n",
+    "$$ yk = \\frac{exp(a_k)}{\\sum_{i=1}^{n} exp(a_i)}$$ \n",
+    "\n",
+    "- ソフトマックス関数を図で表すと図3-22 のようになる\n",
+    "- 全ての入力信号から矢印による結びつきがある\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# 3.5.1 恒等関数とソフトマックス関数\n",
+    "# ソフトマックス関数の実装\n",
     "a = np.array([0.3, 2.9, 4.0])\n",
     "exp_a = np.exp(a) # 指数関数\n",
     "assert_allclose(exp_a, np.array([1.34985881, 18.17414537, 54.59815003]))\n",
@@ -166,12 +211,13 @@
     "assert sum_exp_a == 74.1221542101633\n",
     "\n",
     "y = exp_a / sum_exp_a\n",
-    "assert_allclose(y, np.array([0.018211273295547534, 0.2451918129350739, 0.7365969137693785]))\n"
+    "assert_allclose(y, np.array([0.018211273295547534, 0.2451918129350739, 0.7365969137693785]))\n",
+    "assert sum(y) == 1 # 総和は1になる（3.5.3 ソフトマックス関数の特徴 の先取り）"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,25 +229,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.5.2 ソフトマックス関数の実装上の注意\n",
+    "- ↑の実装は正しいが、Pythonの仕様として正しく動作しない場合がある\n",
+    "- それはオーバーフローするため\n",
+    "- 式3.11 のように式を変更する\n",
+    "  - \b書けなかったので本を参照\n",
+    "  - 何らかの定数を足し算しても結果は変わらない\n",
+    "  - オーバーフローを回避するため入力信号の中で最大の値を使用することが一般的"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3.5.2 ソフトマックス関数の実装上の注意\n",
+    "# 既存のソフトマックス関数で実行\n",
     "# 大きすぎる値になるためnp.nanが返ってくる\n",
     "assert_allclose(softmax(np.array([1010, 1000, 990])), np.array([np.nan, np.nan, np.nan]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def softmax(a):\n",
     "    c = np.max(a)\n",
-    "    exp_a = np.exp(a - c)\n",
+    "    exp_a = np.exp(a - c) # 入力信号の最大値を引く\n",
     "    sum_exp_a = np.sum(exp_a)\n",
     "    y = exp_a / sum_exp_a\n",
     "    return y\n",
@@ -210,19 +269,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.5.3 ソフトマックス関数の特徴\n",
+    "- 0から1.0までの実数になる\n",
+    "- 出力の総和が1になる → 確率として解釈可能\n",
+    "- ソフトマックス関数を適用しても各要素の大小関係は変わらない\n",
+    "- クラス分類では出力の一番大きいニューロンに相当するクラスだけを認識結果とする\n",
+    "- つまり、クラス分類を予測する場合、ソフトマックス関数を省略することが可能\n",
+    "  - 2番めに相当する郡？とか確率とか知りたい場合には必要。\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# ソフトマックス関数の特徴\n",
     "y = softmax(np.array([0.3, 2.9, 4.0]))\n",
     "assert_allclose(y, np.array([0.01821127329554753, 0.24519181293507392, 0.7365969137693786]))\n",
     "\n",
     "# 総和が1になるため、出力を確率と解釈可能\n",
     "assert np.sum(y) == 1.0\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.5.4 出力層のニューロンの数\n",
+    "- 出力層のニューロンの数は解くべき問題に応じて決める必要がある\n",
+    "- 10クラス分類問題では出力層のニューロンは10個に設定する"
    ]
   },
   {
